--- a/bak_home/contact/index.html
+++ b/bak_home/contact/index.html
@@ -277,8 +277,8 @@
 
   
 
-  <link rel="icon" type="image/png" href="/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_32x32_fill_lanczos_center_3.png" />
-  <link rel="apple-touch-icon" type="image/png" href="/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_180x180_fill_lanczos_center_3.png" />
+  <link rel="icon" type="image/png" href="/media/icon.png" />
+  <link rel="apple-touch-icon" type="image/png" href="/media/icon.png" />
 
   <link rel="canonical" href="https://ahren09.github.io/bak_home/contact/" />
 
@@ -308,8 +308,8 @@
   <meta property="og:site_name" content="Yiqiao Jin | Gatech" />
   <meta property="og:url" content="https://ahren09.github.io/bak_home/contact/" />
   <meta property="og:title" content="Contact | Yiqiao Jin | Gatech" />
-  <meta property="og:description" content="" /><meta property="og:image" content="https://ahren09.github.io/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_3.png" />
-    <meta property="twitter:image" content="https://ahren09.github.io/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
+  <meta property="og:description" content="" /><meta property="og:image" content="https://ahren09.github.io/media/icon.png" />
+    <meta property="twitter:image" content="https://ahren09.github.io/media/icon.png" /><meta property="og:locale" content="en-us" />
   
     
     
