--- a/index.html
+++ b/index.html
@@ -297,8 +297,8 @@
 
   
 
-  <link rel="icon" type="image/png" href="/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_32x32_fill_lanczos_center_3.png" />
-  <link rel="apple-touch-icon" type="image/png" href="/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_180x180_fill_lanczos_center_3.png" />
+  <link rel="icon" type="image/png" href="/media/0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_32x32_fill_lanczos_center_3.png" />
+  <link rel="apple-touch-icon" type="image/png" href="/media/icon.png" />
 
   <link rel="canonical" href="https://bulaienTang.github.io/" />
 
@@ -877,7 +877,7 @@
       <ul class="network-icon" aria-hidden="true">
         
         <li>
-          <a href="/tangtang12280@ucla.edu"  aria-label="envelope">
+          <a href="/tangtang1228@ucla.edu"  aria-label="envelope">
             <i class="fas fa-envelope big-icon"></i>
           </a>
         </li>
