--- a/index.html
+++ b/index.html
@@ -877,7 +877,7 @@
       <ul class="network-icon" aria-hidden="true">
         
         <li>
-          <a href="/tangtang1228@ucla.edu"  aria-label="envelope">
+          <a href="mailto:tangtang1228@ucla.edu"  aria-label="envelope">
             <i class="fas fa-envelope big-icon"></i>
           </a>
         </li>
