--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
 
   <section id="experience" class="home-section wg-experience  "  >
    <div class="home-section-bg " ></div>
-   
+
     <div class="container">
       <div class="row  ">
         <div class="section-heading col-12 col-lg-4 mb-3 mb-lg-0 d-flex flex-column align-items-center align-items-lg-start">
@@ -729,7 +729,7 @@
                 <div class="col">&nbsp;</div>
               </div>
               <div class="m-2">
-                <span class="badge badge-pill border exp-fill">&nbsp;</span>
+                <span class="badge badge-pill border">&nbsp;</span>
               </div>
               <div class="row h-50">
                 <div class="col border-right">&nbsp;</div>
@@ -741,12 +741,12 @@
               <div class="card">
                 <div class="card-body">
                   <div class="d-flex align-content-start">
-                    <div class="mr-2 mb-2"><img src="/media/icons/brands/logo_L4E.jpeg" width="56px" height="56px" alt="Georgia Institute of Technology" loading="lazy"></div>
+                    <div class="mr-2 mb-2"><img src="/media/icons/brands/logo_L4E.jpeg" width="56px" height="56px" alt="Look4Event" loading="lazy"></div>
                     <div>
                       <div class="section-subheading card-title exp-title text-muted my-0">Founding Frontend Developer</div>
                       <div class="section-subheading card-title exp-company text-muted my-0">Look4Event</div>
                       <div class="text-muted exp-meta">
-                        June 2022 – Present
+                        June 2022 – Oct 2022
                         <span class="middot-divider"></span>
                         <span>Los Angeles, CA, USA</span>
                       </div>
@@ -774,7 +774,7 @@
                 <span class="badge badge-pill border ">&nbsp;</span>
               </div>
               <div class="row h-50">
-                <div class="col border-right">&nbsp;</div>
+                <div class="col">&nbsp;</div>
                 <div class="col">&nbsp;</div>
               </div>
             </div>
