--- a/index.html
+++ b/index.html
@@ -1053,7 +1053,11 @@
         </div>
       </section>
 
-      <section id="publications" class="home-section wg-pages">
+      <section
+        id="publications"
+        class="home-section wg-pages"
+        style="display: none"
+      >
         <div class="home-section-bg"></div>
         <div class="container">
           <div class="row">
