hide featured publication

--- a/index.html
+++ b/index.html
@@ -732,7 +732,11 @@
         </div>
       </section>
 
-      <section id="featured" class="home-section wg-featured">
+      <section
+        id="featured"
+        class="home-section wg-featured"
+        style="display: none"
+      >
         <div class="home-section-bg"></div>
         <div class="container">
           <div class="row">
