--- a/index.html
+++ b/index.html
@@ -636,7 +636,11 @@
         </div>
       </section>
 
-      <section id="projects" class="home-section wg-portfolio">
+      <section
+        id="projects"
+        class="home-section wg-portfolio"
+        style="display: none"
+      >
         <div class="home-section-bg"></div>
         <div class="container">
           <div class="row">
