--- a/index.html
+++ b/index.html
@@ -354,14 +354,15 @@
 
               <div class="article-style">
                 <p>
-                  Jingchen Tang (汤景臣, Bryan) is a CS undergraduate student at
-                  University of California, Los Angeles.
+                  Jingchen Tang (汤景臣, Bryan) is a fourth year CS
+                  undergraduate student at University of California, Los
+                  Angeles.
                 </p>
 
                 <p>
-                  He worked as an undergraduate researcher at Machine
-                  Intelligence Group (MINT) on machine learning methods on
-                  climate downscaling & forecasting under the supervision of
+                  He is an undergraduate researcher at Machine Intelligence
+                  Group (MINT) focusing on machine learning methods on climate
+                  downscaling & forecasting under the supervision of
                   <a
                     href="https://aditya-grover.github.io/"
                     target="_blank"
